--- a/komen_like_rate/templates/komen_like_rate/favorite_button.html
+++ b/komen_like_rate/templates/komen_like_rate/favorite_button.html
@@ -9,7 +9,7 @@
   type="button"
 >
   <span id="favIcon" class="text-base" style="color:{% if is_favorited %}#a16207{% else %}#1f2937{% endif %};">❤︎</span>
-  <span id="favLabel">{% if is_favorited %}Favourited{% else %}Favourite{% endif %}</span>
+  <span id="favLabel">{% if is_favorited %}Favorited{% else %}Favorite{% endif %}</span>
 </button>
 
 <style>
