--- a/auth_profil/templates/password_reset_email.html
+++ b/auth_profil/templates/password_reset_email.html
@@ -1,13 +1,13 @@
-Halo,
+Hello,
 
-Anda menerima email ini karena Anda (atau seseorang) meminta untuk mereset password akun Anda di Kick Chronicle.
+You received this email because you (or someone else) requested to reset your Kick Chronicle account password.
 
-Silakan klik link di bawah ini untuk melanjutkan:
+Please click the link below to continue:
 {{ protocol }}://{{ domain }}{% url 'auth_profil:password_reset_confirm' uidb64=uid token=token %}
 
-Jika link di atas tidak berfungsi, salin dan tempel URL tersebut ke browser Anda.
+If the link above doesn't work, please copy and paste the URL into your browser.
 
-Jika Anda tidak meminta reset password, abaikan saja email ini.
+If you didn't request a password reset, please ignore this email.
 
-Terima kasih,
-Tim Kick Chronicle
+Thank you,
+Kick Chronicle Team
